Fix UT with JDK17
Powermock is accessing java.base internals, make sure to open them
during surefire invocation.

Change-Id: Ia6d8c4747ff27bcb09b2fb2d1e7327fb91f5d5e1
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>