@@ -84,4 +84,23 @@
       <artifactId>mdsal-singleton-dom-impl</artifactId>
     </dependency>
   </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration combine.children="append">
+          <!-- FIXME: remove this declaration once powermock is gone -->
+            <argLine>
+                @{argLine}
+                --add-opens java.base/java.lang=ALL-UNNAMED
+                --add-opens java.base/java.lang.reflect=ALL-UNNAMED
+                --add-opens java.base/java.net=ALL-UNNAMED
+                --add-opens java.base/java.util=ALL-UNNAMED
+                --add-opens java.base/java.util.concurrent=ALL-UNNAMED
+            </argLine>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
